--- a/chordslidecreator/frontend/src/assets/css/main.css
+++ b/chordslidecreator/frontend/src/assets/css/main.css
@@ -3,14 +3,14 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #eee;
+  color: #FFF;
   margin-top: 60px;
 }
 
 html {
   height: 100%;
   overflow: hidden;
-  background-color: #131313;
+  background-color: #333333;
   background-size: 20px 20px;
 }
 
